--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+*.DS_Store
+./*/.DS_Store
+
 # Created by https://www.gitignore.io/api/jupyternotebooks
 # Edit at https://www.gitignore.io/?templates=jupyternotebooks
 
